fixed stats having scrollbars

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1270,3 +1270,6 @@ table#user-info th {
 #follow-btn {
     width: 7em;
 }
+.mini-molt.trophy {
+	overflow: hidden;
+}
